--- a/_site.yml
+++ b/_site.yml
@@ -15,6 +15,8 @@ navbar:
     menu:
     - text: "Struktura dat"
       href: 03_explore.html
+    - text: "Analýza geograficky složitých projektů"
+      href: 04_explore-complicated-projects.html
   - text: Úpravy dat
     menu:
     - text: TO DO
