--- a/_site.yml
+++ b/_site.yml
@@ -37,6 +37,8 @@ navbar:
     menu:
     - text: "Technická dokumentace"
       href: dev.html
+    - text: "Dokumentace výstupu"
+      href: codebook.html
   right:
   - icon: fa-github fa-lg
     href: https://github.com/petrbouchal/mmr-esif-clean
