--- a/_site.yml
+++ b/_site.yml
@@ -40,7 +40,7 @@ navbar:
     - text: "Dokumentace výstupu"
       href: codebook.html
   right:
-  - icon: fa-github fa-lg
+  - icon: fab fa-github fa-lg
     href: https://github.com/petrbouchal/mmr-esif-clean
 output:
   html_document:
