--- a/config.yml
+++ b/config.yml
@@ -2,4 +2,9 @@ default:
   input_dir: "data-input/sestavy-20210119"
   input_chu_xlsx: "data-input/CHKONP.xlsx"
   input_resolved_xlsx: "data-manual/prj_nonhier-resolved.xlsx"
+  arrow_output_dir: "data-output/dtl-all-arrow"
+  arrow_partitioning: ["obec_puvod", "op_id", "chunk", "rozpad_typ"]
+  excel_output_dir: "data-export/excel-all-chunked"
   export_excel: true
+
+
