--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,10 @@
 default:
-  input_dir: "data-input/sestavy-20210119"
+  input_dir: "data-input/sestavy-20210603"
   input_chu_xlsx: "data-input/CHKONP.xlsx"
   input_resolved_xlsx: "data-manual/prj_nehierarchicke-vybrano.xlsx"
-  arrow_output_dir: "data-output/dtl-all-arrow2"
+  arrow_output_dir: "data-output/dtl-all-arrow-202111"
   arrow_partitioning: ["obec_puvod", "op_id", "chunk", "rozpad_typ"]
   excel_output_dir: "data-export/excel-all-chunked"
-  export_excel: true
+  export_excel: false
 
 
